# obs2web

./: Cargo.toml  README.md
src/: content.rs  domain.rs  fs.rs  lib.rs  main.rs  template.rs
templates/: base.html  index.html  macros.html  style.css  tag.html
test_vault/: Another Note.md  code_test.md  test.md
