[package]
name = "obs2web"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
comrak = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
tera = "1"
gray_matter = "0.2"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
notify = "6.1.1"
regex = "1"
